This patch teaches sed to interpret the a file name of "-" in a special way when given to the -f flag. This behavior is present in GNU sed. pfg@ suggested in the Phabricator review to request an exp-run for this change. Phabricator: https://reviews.freebsd.org/D24079
This patch does not apply
Hmm, this is unexpected. Nevertheless, I've rebased on the patches on latest head and uploaded them again. Also, here are the the same patches but in my FreeBSD tree on GitHub: https://github.com/0mp/freebsd/commits/0mp/sed_-f_-
Exp-run looks fine
Wonderful news! Thanks a lot!
A commit references this bug: Author: 0mp Date: Wed Jun 10 19:23:59 UTC 2020 New revision: 362017 URL: https://svnweb.freebsd.org/changeset/base/362017 Log: Read commands from stdin when -f - is passed to sed(1) This patch teaches sed to interpret a "-" in a special way when given as an argument to the -f flag. This behavior is also present in GNU sed. PR: 244872 Tested by: antoine (exp-run) Reviewed by: pfg, tobik (older version) Approved by: pfg (src) Relnotes: yes MFC after: 2 weeks Differential Revision: https://reviews.freebsd.org/D24079 Changes: head/usr.bin/sed/main.c head/usr.bin/sed/sed.1 head/usr.bin/sed/tests/sed2_test.sh
A commit references this bug: Author: 0mp Date: Sat Jun 27 14:27:38 UTC 2020 New revision: 362687 URL: https://svnweb.freebsd.org/changeset/base/362687 Log: MFC 362017, 362039, 362071: Read commands from stdin when -f - is passed to sed(1) This patch teaches sed to interpret a "-" in a special way when given as an argument to the -f flag. This behavior is also present in GNU sed. PR: 244872 Tested by: antoine (exp-run) Reviewed by: pfg, tobik (older version) Approved by: pfg (src) Relnotes: yes Differential Revision: https://reviews.freebsd.org/D24079 Remove duplicate lines from sed tests Reported by: yuripv Approved by: pfg (src) Remove some more duplicate test cases I accidentally committed Reported by: markj, yuripv Changes: _U stable/12/ stable/12/usr.bin/sed/main.c stable/12/usr.bin/sed/sed.1 stable/12/usr.bin/sed/tests/sed2_test.sh
A commit references this bug: Author: 0mp Date: Sat Jun 27 14:31:34 UTC 2020 New revision: 362688 URL: https://svnweb.freebsd.org/changeset/base/362688 Log: MFC 362017, 362039, 362071: Read commands from stdin when -f - is passed to sed(1) This patch teaches sed to interpret a "-" in a special way when given as an argument to the -f flag. This behavior is also present in GNU sed. PR: 244872 Tested by: antoine (exp-run) Reviewed by: pfg, tobik (older version) Approved by: pfg (src) Relnotes: yes Differential Revision: https://reviews.freebsd.org/D24079 Remove duplicate lines from sed tests Reported by: yuripv Approved by: pfg (src) Remove some more duplicate test cases I accidentally committed Reported by: markj, yuripv Changes: _U stable/11/ stable/11/usr.bin/sed/main.c stable/11/usr.bin/sed/sed.1 stable/11/usr.bin/sed/tests/sed2_test.sh