MFC 362017, 362039, 362071:

Read commands from stdin when -f - is passed to sed(1)

This patch teaches sed to interpret a "-" in a special way when given
as an argument to the -f flag.

This behavior is also present in GNU sed.

PR:		244872
Tested by:	antoine (exp-run)
Reviewed by:	pfg, tobik (older version)
Approved by:	pfg (src)
Relnotes:	yes
Differential Revision:	https://reviews.freebsd.org/D24079

Remove duplicate lines from sed tests

Reported by:	yuripv
Approved by:	pfg (src)

Remove some more duplicate test cases I accidentally committed

Reported by:	markj, yuripv